--- a/backend/features/chatbot/test.ipynb
+++ b/backend/features/chatbot/test.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "839104e1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/lucas_of/anaconda3/envs/NLP/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'It was a productive day! I processed a lot of information and helped many users.  How was yours?\\n'"
+       "'Os componentes específicos do pod Ignite podem variar ligeiramente dependendo do modelo, mas geralmente incluem:\\n\\n* **Bateria:** Fornece a energia para aquecer o líquido.\\n* **Cartucho/Pod:** Contém o e-líquido (nicotina e aromatizantes) e a resistência (bobina de aquecimento).  Estes são geralmente descartáveis.\\n* **Circuito eletrônico (em alguns modelos):** Controla a potência e a segurança do dispositivo.\\n* **Boca de saída (Drip tip):** Por onde o usuário inala o vapor.\\n* **Conector (para conectar o pod à bateria):**  Permite a conexão entre o pod e a bateria.\\n\\nÉ importante observar que esta é uma lista geral. Recomendo verificar as especificações do modelo Ignite específico que você possui para obter informações mais precisas.\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +22,7 @@
     "\n",
     "chatbot = Chatbot()\n",
     "\n",
-    "chatbot.response(\"How was your day?\")\n"
+    "chatbot.response(\"Quais os componentes da marca Ignite de pod (cigarro eletrônico)?\")\n"
    ]
   },
   {
@@ -45,23 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "02102d50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I don't have memory of past conversations. To answer your question, I need more context or information.\\n\""
+       "'Não consigo acessar informações em tempo real, incluindo especificações de produtos como o pod Ignite.  Minhas informações são baseadas em dados com os quais fui treinado, e não tenho acesso à internet ou a bases de dados de produtos atualizadas. Para obter as especificações exatas do seu pod Ignite, consulte o manual do usuário, o site do fabricante ou a embalagem do produto.\\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chatbot.response(\"What was my first question?\")"
+    "chatbot.response(\"Você consegue acessar as especificaçoes do Ignite?\")"
    ]
   },
   {
